--- a/app/views/experiment/index.html.haml
+++ b/app/views/experiment/index.html.haml
@@ -1,4 +1,7 @@
 = select_tag :experiment_id, options_for_select(@exs.map{ |ex| [ex.created_at.localtime, ex.id] }), { prompt: "Select Experiment" }
-#phone_acc_chart_x
-#phone_acc_chart_y
-#phone_acc_chart_z
+#strap_acc_chart
+#strap_acc_stats
+#phone_acc_chart
+#phone_acc_stats
+#phone_gyr_chart
+#phone_gyr_stats
